--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 
         <ul id="task-list"></ul>
     </div>
+
+    <footer>
+        Designed by Nani
+    </footer>
+    
     <script src="./app.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
